--- a/src/components/NavbarToggler/style.css
+++ b/src/components/NavbarToggler/style.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1024px) {
   .toggle-wrapper {
     background-color: var(--primary-blue);
     display: inline-block;
@@ -12,8 +12,8 @@
     padding: 1px;
     cursor: pointer;
     z-index: 8;
-    margin-left: 90vw;
-    margin-top: -18px;
+    margin-left: 88vw;
+    margin-top: -4px;
   }
   .toggle-bar {
     width: 50px;
@@ -78,10 +78,13 @@
 
 @media screen and (max-width: 500px) {
   .toggle-wrapper {
-    margin-left: 80vw;
+    margin-left: 76vw;
   }
+}
+
+@media screen and (max-width: 320px) {
   .toggle-wrapper {
-    margin-left: 80vw;
+    margin-left: 72vw;
   }
 }
 /*# sourceMappingURL=style.css.map */
