--- a/src/components/NewsItem/style.scss
+++ b/src/components/NewsItem/style.scss
@@ -38,7 +38,7 @@
 .news-header {
   font-size: var(--font-size-medium);
   margin-top: 1rem;
-  text-decoration: underline;
+  text-decoration: none;
   color: var(--color-secondary-dark);
 }
 
