--- a/src/components/TopGainerItem/style.css
+++ b/src/components/TopGainerItem/style.css
@@ -49,5 +49,8 @@
   .top-gainer__img {
     width: 15%;
   }
+  .top-gainer__details {
+    font-size: var(--font-size-verysmall);
+  }
 }
 /*# sourceMappingURL=style.css.map */
