--- a/src/pages/CurrencyConverter/style.css
+++ b/src/pages/CurrencyConverter/style.css
@@ -124,9 +124,34 @@
 }
 
 @media screen and (max-width: 500px) {
+  .currency-converter__form {
+    margin-top: 2rem;
+    width: 47rem;
+    height: 47rem;
+    border-radius: 25px;
+  }
+  .currency-converter__form input {
+    width: 23rem;
+  }
+  .currency-converter__form select {
+    width: 30rem;
+  }
+  .currency-converter .calculate-btn {
+    width: 30rem;
+    margin-top: .6rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
   .currency-converter {
-    padding: 7rem 7rem;
-    width: 53rem;
+    padding: 1rem 0;
+  }
+  .currency-converter__form {
+    padding: 0rem 1rem;
+    margin-top: 2rem;
+    width: 41rem;
+    height: 44rem;
+    border-radius: 25px;
   }
 }
 /*# sourceMappingURL=style.css.map */
