--- a/src/components/CryptoTableCell/style.scss
+++ b/src/components/CryptoTableCell/style.scss
@@ -16,6 +16,14 @@
     width: 10rem;
     font-size: var(--font-size-small);
     z-index: 0;
+    button {
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    button:active {
+      outline: none;
+    }
     i {
       margin-left: 0.4rem;
       display: inline-block;
@@ -23,21 +31,6 @@
   }
   &__item:active {
     color: var(--yellow);
-  }
-  &__form {
-    position: relative;
-    label {
-      font-size: var(--font-size-small);
-    }
-    input {
-      width: 3rem;
-      height: 3rem;
-      position: absolute;
-      top: -57%;
-      left: 32%;
-      cursor: pointer;
-      opacity: 0;
-    }
   }
 }
 
