--- a/src/components/ExchangeTableCell/style.css
+++ b/src/components/ExchangeTableCell/style.css
@@ -2,8 +2,8 @@
   padding: 1rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 17.5% 13% 10% 9% 11% 10% 9%;
-      grid-template-columns: 17.5% 13% 10% 9% 11% 10% 9%;
+  -ms-grid-columns: 17.5% 13% 7% 15% 5% 15% 6%;
+      grid-template-columns: 17.5% 13% 7% 15% 5% 15% 6%;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -30,6 +30,16 @@
   z-index: 0;
 }
 
+.cell__item button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.cell__item button :active {
+  outline: none;
+}
+
 .cell__item i {
   margin-left: 0.4rem;
   display: inline-block;
@@ -54,19 +64,36 @@
   top: -57%;
   left: 32%;
   cursor: pointer;
-  opacity: 0;
+  opacity: 1;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
   .cell {
     padding: 0;
-    -ms-grid-columns: 24% 14% 27% 11% 26%;
-        grid-template-columns: 24% 14% 27% 11% 26%;
+    -ms-grid-columns: 22% 7% 13% 9% 9% 12% 9%;
+        grid-template-columns: 22% 7% 13% 9% 9% 12% 9%;
   }
   .cell__item {
     width: 9rem;
     -webkit-box-shadow: none;
             box-shadow: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .cell {
+    padding: 0;
+    -ms-grid-columns: 20% 5% 21% 7% 21% 7% 18%;
+        grid-template-columns: 20% 5% 21% 7% 21% 7% 18%;
+  }
+  .cell__item {
+    width: 9rem;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=style.css.map */
