--- a/src/components/ViewWallet/style.css
+++ b/src/components/ViewWallet/style.css
@@ -14,6 +14,8 @@
   line-height: 1.7;
   border-radius: 2px;
   width: 60vw;
+  -webkit-box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
+          box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
 }
 
 .view-wallet__exit-container {
