--- a/src/components/ViewWallet/style.scss
+++ b/src/components/ViewWallet/style.scss
@@ -7,6 +7,7 @@
   line-height: 1.7;
   border-radius: 2px;
   width: 60vw;
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
 
   &__exit-container {
     width: 53.5vw;
