--- a/src/pages/Cart/style.css
+++ b/src/pages/Cart/style.css
@@ -91,10 +91,10 @@
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .cart__wrapper {
-    height: 53rem;
-    width: 55rem;
+    min-height: 63rem;
+    width: 80vw;
   }
 }
 
