--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -7,7 +7,7 @@
 }
 
 .watchlist-icon {
-  font-size: 2rem;
+  font-size: 2.8rem;
 }
 
 .cart {
@@ -59,17 +59,21 @@
 
 @media screen and (max-width: 500px) {
   .cart {
+    margin-right: 4rem;
     &__right {
       height: 13px;
       width: 12px;
       box-shadow: 0 2rem 3rem rgba(64, 73, 73, 0.5);
       position: absolute;
       top: -17%;
-      right: -31.5%;
+      right: 78.5%;
     }
 
     p {
       font-size: 8px;
     }
+  }
+  .watchlist-icon {
+    font-size: 4rem;
   }
 }
