--- a/src/components/TopGainers/style.scss
+++ b/src/components/TopGainers/style.scss
@@ -24,26 +24,33 @@
         text-align: center;
         margin-top: 1rem;
     }
-  }
-  .top-performers__header {
-    color: var(--color-secondary-dark);
-    font-size: var(--font-size-medium);
-    text-align: center;
-    margin-top: 2rem;
-  }
-  
-  .top-gainer-list-wrapper {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    margin-top: 2rem;
-    padding: 1rem 3rem;
-  }
-  
-  @media screen and (max-width: 500px) {
-    .top-gainer-list-wrapper {
-      grid-template-columns: repeat(3, 1fr);
-      margin-top: 1rem;
-      padding: 1rem 1rem;
+    &__header {
+      font-size: var(--font-size-medium);
+      text-align: center;
+      margin-top: 2rem;
     }
+    &__wrapper {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      margin-top: 2rem;
+      padding: 1rem 3rem;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .top-performers {
+      &__btn-wrapper {
+        button {
+          width: 13rem;
+        }
+      }
+      &__wrapper {
+        grid-template-columns: repeat(3, 1fr);
+        margin-top: 1rem;
+        padding: 1rem 1rem;
+      }
+
+    }
+  
 
   }
