--- a/src/components/WalletTable/style.scss
+++ b/src/components/WalletTable/style.scss
@@ -11,7 +11,7 @@
     margin-top: 3.5rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    justify-items: stretch;
+    justify-items: center;
   }
 }
 
