--- a/src/components/NewsItem/style.scss
+++ b/src/components/NewsItem/style.scss
@@ -1,16 +1,16 @@
 .news-item {
-    padding: 0rem 2rem;
-    line-height: 1;
-    height: 18rem;
-    display: grid;
-    grid-template-columns: 30% 70%;
-    justify-items: center;
-    align-items: center;
-    box-shadow: 0 0rem 1rem rgba(54, 51, 51, 0.5);
-    background: white;
-    width: 72vw;
-    margin-top: .8rem;
-    border-radius: 3px;
+  padding: 0rem 2rem;
+  line-height: 1;
+  height: 18rem;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  justify-items: center;
+  align-items: center;
+  box-shadow: 0 0rem 1rem rgba(54, 51, 51, 0.5);
+  background: white;
+  width: 72vw;
+  margin-top: 0.8rem;
+  border-radius: 3px;
   &__right a {
     text-decoration: none;
     color: var(--color-primary-dark);
@@ -23,8 +23,8 @@
 
     img {
       object-fit: cover;
-      width: 100%;
-      height: 100%;
+      width: 52%;
+      height: 55%;
     }
   }
 
