--- a/src/components/DeleteCryptoButton/style.scss
+++ b/src/components/DeleteCryptoButton/style.scss
@@ -1,9 +1,14 @@
 .delete-crypto {
-  color: rgb(192, 53, 83);
+  color: rgb(207, 70, 99);
+  background: transparent;
   border: none;
   cursor: pointer;
+  font-size: 1.2em;
 }
 
 .delete-crypto:hover {
   color: rgb(156, 21, 66);
+}
+.delete-crypto:active {
+  outline: none;
 }
