--- a/src/components/TopGainers/style.scss
+++ b/src/components/TopGainers/style.scss
@@ -1,6 +1,6 @@
 
 .top-performers {
-    padding: 2rem 2rem;
+    padding: 12rem 2rem 1rem 2rem;
     &__btn-wrapper {
         display: flex;
         justify-content: center;
