--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -5,6 +5,7 @@
   padding: 2.5rem 2rem;
   width: 100vw;
   height: 7.5rem;
+  margin-top: 4.5rem;
   z-index: 2;
   transition: ease-in-out 0.6s;
   :hover {
