--- a/src/components/HomeBanner/style.scss
+++ b/src/components/HomeBanner/style.scss
@@ -5,6 +5,7 @@
   background-position: center;
   background-size: cover;
   color: var(--color-secondary-dark);
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,11 +13,15 @@
   line-height: 1.7;
   position: relative;
   width: 100vw;
+  
+  &__wrapper {
+    margin-top: -2rem;
+  }
   img {
     position: absolute;
-    top: 10%;
+    top: 12%;
     right: 5%;
-    width: 20%;
+    width: 19%;
   }
   &__title {
     letter-spacing: 1.5rem;
@@ -30,14 +35,16 @@
     margin-top: 1rem;
   }
   &__btn-explore {
-    margin-top: 4rem;
-    padding: 1.5rem;
+    margin-top: 2.6rem;
+    padding: 1.3rem;
     border: none;
     color: white;
     background-color: var(--primary);
     text-transform: uppercase;
     font-weight: 700;
     cursor: pointer;
+    border-radius: 3px;
+    width: 12rem;
   }
   &__btn-explore:hover {
     background-color: var(--primary-light);
@@ -48,7 +55,26 @@
     color: white;
   }
 }
-
+.light {
+  background-image: linear-gradient(
+      to right,
+      rgba(243, 233, 233, 0.8) 0%,
+      rgba(247, 236, 236, 0.9) 100%
+    ),
+    url('https://images.pexels.com/photos/6478886/pexels-photo-6478886.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+  background-size: cover;
+  background-position: top;
+}
+.dark {
+  background-image: linear-gradient(
+        to right,
+        rgba(39, 37, 37, 0.8) 0%,
+        rgba(41, 36, 36, 0.9) 100%
+      ),
+      url('https://images.pexels.com/photos/6478886/pexels-photo-6478886.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-size: cover;
+    background-position: top;
+}
 @media screen and (max-width: 768px) {
   .Header {
     padding: 20rem 2rem;
