--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: transparent;
   &__logo {
     width: 55%;
     margin-top: .3rem;
@@ -49,15 +50,9 @@
   }
 }
 
-/*
-.nav-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-  width: 100%;
-  flex-direction: column;
-}*/
+.navbar.active {
+  background-color: var(--primary);
+}
 
 .nav-list {
   display: flex;
@@ -167,6 +162,7 @@
 
   .currency-icon {
     font-size: 1.3em;
+    color: white;
   }
 
 @media screen and (max-width: 1024px) {
