refactor: fixed nav icons on navbar for themes

--- a/src/components/ExchangesTable/style.scss
+++ b/src/components/ExchangesTable/style.scss
@@ -15,7 +15,8 @@
         padding-top: 9%;
       }
     &__header {
-      margin-top: 3rem;
+      margin-top: 13rem;
+      margin-left: 7rem;
     }
     &__wrapper {
       display: grid;
