--- a/src/components/ThemedButton/style.scss
+++ b/src/components/ThemedButton/style.scss
@@ -4,7 +4,8 @@
 .theme-switch {
   font-size: 1.5em;
   cursor: pointer;
-  margin-left: 1.5rem;
+  margin-left: 1.1rem;
+  margin-right: .4rem;
 }
 
 @media screen and (max-width: 1024px) {
