--- a/src/components/ViewWallet/style.scss
+++ b/src/components/ViewWallet/style.scss
@@ -67,6 +67,8 @@
     }
     i {
         color: var(--overlay-mask);
+        font-size: 1.2em;
+        margin-right: .4em;
     }
     a {
         display: flex;
