--- a/src/components/MainTable/style.scss
+++ b/src/components/MainTable/style.scss
@@ -4,8 +4,8 @@
   padding: 3rem 0;
   padding-bottom: 2rem;
   thead {
-    position: fixed;
-    top: 13%;
+    position: sticky;
+    top: 89%;
     left: 0%;
     margin-bottom: 6rem;
     width: 100vw;
