refactor: added image to  converter form crypto

--- a/src/components/Image/style.scss
+++ b/src/components/Image/style.scss
@@ -12,6 +12,12 @@
   }
 }
 
+.image-big {
+
+}
+.image-small {
+  
+}
 @media screen and (max-width: 500px) {
   .image-container {
     height: 20px;
