--- a/src/components/SavedCurrencyTableHeader/style.scss
+++ b/src/components/SavedCurrencyTableHeader/style.scss
@@ -1,6 +1,6 @@
 .saved-currency-table-header {
     display: grid;
-    grid-template-columns: 17% 23% 40% 25%;
+    grid-template-columns: 11% 14% 19% 37% 10%;
     padding: .5rem 1.3rem;    
     justify-items: flex-start;
     align-items: center;
