--- a/src/components/Image/style.module.scss
+++ b/src/components/Image/style.module.scss
@@ -11,6 +11,19 @@
   }
 }
 
+.medium_image {
+  display: inline-block;
+  overflow: hidden;
+  height: 47px;
+  width: 47px;
+  object-fit: cover;
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .small_image {
   display: inline-block;
   overflow: hidden;
@@ -25,6 +38,14 @@
 }
 
 @media screen and (max-width: 500px) {
+  .big_image {
+    height: 60px;
+    width: 60px;
+  }
+  .medium_image {
+    height: 27px;
+    width: 27px;
+  }
   .small_image {
     height: 20px;
     width: 20px;
