--- a/src/components/SavedCurrencyTable/style.scss
+++ b/src/components/SavedCurrencyTable/style.scss
@@ -14,14 +14,12 @@
         grid-template-columns: 12% 12% 19% 36% 12% 7%;
         justify-items: flex-start;
         align-items: center;
-        margin: .3rem;
+        // margin: .3rem;
         min-width: 34rem;
-        border: 1px solid rgba(192, 183, 183, 0.5);
+        border-top: 1px solid rgba(192, 183, 183, 0.5);
         padding: .5rem .6rem;
         border-radius: 5px;
-        box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
-        // background-color: var(--primary);
-        // color: white;
+        box-shadow: 0 .1rem .1rem rgba(212, 206, 206, 0.3);
         td {
             padding: .2rem .4rem;
         }
