--- a/src/components/MainTable/style.scss
+++ b/src/components/MainTable/style.scss
@@ -1,3 +1,11 @@
+.crypto-banner {
+  width: 100%;
+  text-align: center;
+  padding: 2rem 0 0 0;
+  h2 {
+    color: var(--primary);
+  }
+}
 .crypto-container {
   padding: 0;
   width: 100%;
