--- a/src/pages/CurrencyConverter/style.scss
+++ b/src/pages/CurrencyConverter/style.scss
@@ -19,6 +19,10 @@
     text-align: center;
     /* color: white; */
   }
+  &__btc-icon {
+    color: var(--primary);
+    font-size: 30px;
+  }
 }
 @media screen and (max-width: 500px) {
   .currency-converter {
