--- a/src/components/DailyExchangeVolForm/style.scss
+++ b/src/components/DailyExchangeVolForm/style.scss
@@ -8,7 +8,7 @@
     label {
         margin-top: .4rem;
     }
-    input {
+    input, select {
         padding: .4rem;
         border-radius: 5px;
         border: 1px solid rgba(128, 121, 121, 0.5);
