--- a/src/components/Pagination/style.scss
+++ b/src/components/Pagination/style.scss
@@ -18,14 +18,17 @@
     margin: 0.05rem;
   }
   &__btn {
-    background-color: var(--primary);
-    color: white;
+    color: var(--primary);
     padding: 0.3rem;
-    width: 2.5rem;
+    width: 3rem;
     height: 2.5rem;
     cursor: pointer;
     border: none;
-    border-radius: 50px;
-    box-shadow: 0 .2rem 1rem rgba(rgb(136, 136, 153), 0.3);
+    border-radius: 3px;
+    background: transparent;
+    border: 3px solid var(--primary);
+  }
+  .pagination_selected {
+    background-color: red;
   }
 }
