style:resized charts for responsivness

--- a/src/components/ViewCrypto/style.scss
+++ b/src/components/ViewCrypto/style.scss
@@ -81,14 +81,13 @@
   font-size: var(--font-size-small);
 }
 
-
 .chart-container {
   width: 83.5vw;
   margin-top: 3rem;
   border-radius: 25px;
   box-shadow: 0 1rem 2rem rgba(151, 163, 163, 0.5);
-  background-color: gray;   
-  padding: 2rem 2rem; 
+  background-color: gray;
+  padding: 2rem 2rem;
 }
 
 .volume {
@@ -102,23 +101,34 @@
     min-height: 100vh;
   }
   .view-crypto {
-    padding: 0 1rem;
+    padding: 2rem 1rem;
     min-height: 54vh;
   }
 
   .crypto-content__body {
     margin-top: 5.5rem;
   }
+  .chart-container {
+    width: 88vw;
+}
 }
 
+@media screen and (max-width: 768px) {
+  .view-crypto {
+    width: 96vw;
+  }
+  .navigation-exit__container {
+    width: 92vw;
+}
+}
 @media screen and (max-width: 500px) {
   .view-crypto__background {
     padding: 3rem 0.5rem;
   }
   .view-crypto {
-    padding: 0;
+    padding: 1rem;
     line-height: 1.4;
-    width: 90vw;
+    width: 100vw;
     &__body {
       grid-template-columns: 1fr;
       margin-top: 2rem;
@@ -154,13 +164,13 @@
     align-items: center;
   }
   .chart-container {
-    height: 40vh;
-}
-
-  
+    height: 65vh;
+    width: 96vw;
+  }
 }
 
 @media screen and (max-width: 320px) {
+
   .navigation-exit__container {
     margin-top: 2rem;
   }
